2015-03-12 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-reconciliation.c: fix BAT line proposition (todo #718).

2015-03-10 Pierre Wieser <pwieser@trychlos.org>

	Add all auto-generated files required to compile the application 
	(todo #710).

	* src/ui/ofa-reconciliation.c:
	- doesn't take into account deleted entries (todo #709)
	- doesn't print '0,00' amounts (todo #711).

2015-03-09 Pierre Wieser <pwieser@trychlos.org>

	New Boursorama-PDF import plugin (todo #703)

	* src/import-bourso-pdf/Makefile.am,
	* src/import-bourso-pdf/ofa-importer.c,
	* src/import-bourso-pdf/ofa-importer.h,
	* src/import-bourso-pdf/ofa-module.c: new files.

	* configure.ac,
	* src/Makefile.am: updated accordingly.

	* src/ui/ofa-bat-properties-bin.ui: fix end date entry layout.

	* src/core/my-double.c,
	* src/import-lcl-pdf/ofa-importer.h: fix typos.

2015-03-08 Pierre Wieser <pwieser@trychlos.org>

	* src/import-lcl-pdf/Makefile.am: Poppler libraries are optional 
	and determine the built of pdf-aware plugins (todo #614).

	* src/mysql/Makefile.am: make optional the MySQL plugin (todo #615).

	* src/postgre/Makefile.am: conditionally compile the PostgreSQL 
	plugin.

	* src/m4/pwi-check-mysql.m4: new file.

	* ofa.doap,
	* configure.ac: use Github website URL (todo #2).

	* src/core/my-double.c,
	* src/core/ofs-currency.c: fix exp10 implicit declaration error
	(most probably a side effect of -std=gnu99).

	* Makefile.am,
	* maintainer/run-autogen.sh: compile with ISO C (todo #702).

	Be able to import a bank account transaction list, accepting
	individually any or all lines to match already reconciliated entries
	(todo #689)

	* src/api/ofo-bat.h,
	* src/core/ofo-bat.c: new ofo_bat_get_unused_count() method.

	* src/ui/ofa-buttons-box.c,
	* src/ui/ofa-buttons-box.h: add 'Accept', 'Decline', 'Accept all' 
	buttons.

	* src/ui/ofa-reconciliation.c: updated accordingly.

	Display the count of yet unused BAT lines (todo #704)

	* src/ui/ofa-bat-properties-bin.c,